# Project-Qpid

./: .gitignore  Gemfile  README.MD  __getHelp.py  __init__.py  __main__.py  __system.py  _config.yml  cli.py  constant.py  help.py  index.md  pyproject.toml  requirements.txt  update.sh  utils.py
.github/workflows/: jekyll_submodule.yml
__root/: __argsManager.py  __baseObject.py  __init__.py
applications/: __init__.py  __linear.py  linear_prediction.py  static_prediction.py
args/: __args.py  __init__.py
base/: __baseManager.py  __init__.py
dataset/: __agentManager.py  __splitManager.py
dataset/__base/: __filesManager.py  __init__.py  __inputManager.py  __inputObject.py  __inputObjectManager.py  __picker.py
dataset/agent_based/: __filesManager.py  __init__.py  __inputObject.py  __inputObjectManager.py
dataset/frame_based/: __filesManager.py  __init__.py  __inputObject.py  __inputObjectManager.py
docs/: index.md
docs/dataset/: create-processed-dataset-files.md  dataset-and-split-notes.md  file-formats.md  index.md
docs/model/: index.md
docs/mods/: index.md
docs/quick-start/: index.md
docs/training/: index.md
managers/: __init__.py
model/: __init__.py  __model.py
model/layers/: __base.py  __flatten.py  __graphConv.py  __init__.py  __linear.py  __pooling.py  __traj.py  basic.py  embedding.py  pooling.py  (+3 more)
silverballers/: __MKII_model.py  __MKII_utils.py  __MiniV.py  __agentModel.py  __baseArgs.py  __baseSubnetwork.py  __handlerModel.py  __init__.py  __loss.py  constant.py
training/: __init__.py  __structure.py
vis/: __helper.py  __vis.py
(+71 files in other folders)
